--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         
             <div class="contact-me">
               <h2>Get In Touch</h2>
-              <h3>I Love Coding.</h3>
+              <h3>I Love Coding. What about you?</h3>
               <p style="line-height: 5;">Love coding as much as i do? Lets talk about how awesome coding is</p>
               <a  style="line-height: 5;" class="btn" href="mailto:avilashghosh@email.com">CONTACT ME</a>
             </div>
